# lora-linkedin-pipeline

./: .gitignore  README.md  pyproject.toml
docs/: implementation_plan.md
src/: main.py
src/data_processing/: extractor.py  formatter.py  pipeline.py
tests/unit/: test_data_pipeline.py  test_extractor.py  test_formatter.py  test_setup.py
